--- a/lab3/css/lab.css
+++ b/lab3/css/lab.css
@@ -1,3 +1,10 @@
+.Heading {
+	border: 5px outset blue;
+  background-color: lightblue;
+  text-align: center;
+}
+
+
 #my-portrait {
 	width: 500px;
 }
